log
Wed 19 Apr 2023 02:37:36 AM UTC: 
 tests:  1|8
total_score: 0/70
e35ad30
Thu 20 Apr 2023 04:36:37 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:16: error: unused variable ‘current’ [-Werror=unused-variable]
   42 |     TreeNode * current = NULL;
      |                ^~~~~~~
treemap.c:41:16: error: unused variable ‘root’ [-Werror=unused-variable]
   41 |     TreeNode * root = NULL;
      |                ^~~~
cc1: all warnings being treated as errors
Compilation failed
d7528a1
Thu 20 Apr 2023 04:42:10 AM UTC: 
 treemap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:3: error: unknown type name ‘treeMap’; did you mean ‘TreeMap’?
   41 |   treeMap nuevoMapa;
      |   ^~~~~~~
      |   TreeMap
treemap.c:42:12: error: invalid type argument of ‘->’ (have ‘int’)
   42 |   nuevoMapa->root = NULL;
      |            ^~
treemap.c:43:12: error: invalid type argument of ‘->’ (have ‘int’)
   43 |   nuevoMapa->current = NULL;
      |            ^~
treemap.c:44:12: error: invalid type argument of ‘->’ (have ‘int’)
   44 |   nuevoMapa->lower_than = lower_than;
      |            ^~
Compilation failed
724b8d1
Thu 20 Apr 2023 04:42:17 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:3: error: unknown type name ‘treeMap’; did you mean ‘TreeMap’?
   41 |   treeMap nuevoMapa;
      |   ^~~~~~~
      |   TreeMap
treemap.c:42:12: error: invalid type argument of ‘->’ (have ‘int’)
   42 |   nuevoMapa->root = NULL;
      |            ^~
treemap.c:43:12: error: invalid type argument of ‘->’ (have ‘int’)
   43 |   nuevoMapa->current = NULL;
      |            ^~
treemap.c:44:12: error: invalid type argument of ‘->’ (have ‘int’)
   44 |   nuevoMapa->lower_than = lower_than;
      |            ^~
treemap.c:45:12: error: returning ‘int’ from a function with return type ‘TreeMap *’ makes pointer from integer without a cast [-Werror=int-conversion]
   45 |     return nuevoMapa;
      |            ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2ecd977
Thu 20 Apr 2023 04:42:33 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:12: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   42 |   nuevoMapa->root = NULL;
      |            ^~
treemap.c:43:12: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   43 |   nuevoMapa->current = NULL;
      |            ^~
treemap.c:44:12: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   44 |   nuevoMapa->lower_than = lower_than;
      |            ^~
treemap.c:45:12: error: incompatible types when returning type ‘TreeMap’ but ‘TreeMap *’ was expected
   45 |     return nuevoMapa;
      |            ^~~~~~~~~
treemap.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6cfd9b5
Thu 20 Apr 2023 04:44:29 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
0a933e8
Thu 20 Apr 2023 04:53:29 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
f733703
Thu 20 Apr 2023 04:53:37 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
32036ad
Thu 20 Apr 2023 05:09:35 AM UTC: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  4|7
total_score: 5/70
47ce265
Thu 20 Apr 2023 05:12:37 AM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:78:9: error: expected expression before ‘)’ token
   78 |   while()
      |         ^
Compilation failed
e02d5c1
Thu 20 Apr 2023 05:13:37 AM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:78:9: error: ‘true’ undeclared (first use in this function)
   78 |   while(true)
      |         ^~~~
treemap.c:5:1: note: ‘true’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
    4 | #include "treemap.h"
  +++ |+#include <stdbool.h>
    5 | 
treemap.c:78:9: note: each undeclared identifier is reported only once for each function it appears in
   78 |   while(true)
      |         ^~~~
treemap.c:96:1: error: control reaches end of non-void function [-Werror=return-type]
   96 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
bbb9c27
Thu 20 Apr 2023 05:14:10 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:96:1: error: control reaches end of non-void function [-Werror=return-type]
   96 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
58a2b8b
Thu 20 Apr 2023 05:14:33 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  4|7
total_score: 5/70
46c97ce
Thu 20 Apr 2023 05:18:04 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
53a0502
Thu 20 Apr 2023 05:20:55 AM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:100:1: error: control reaches end of non-void function [-Werror=return-type]
  100 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
955277f
Thu 20 Apr 2023 05:21:08 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:99:3: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   99 |   return;
      |   ^~~~~~
treemap.c:75:8: note: declared here
   75 | Pair * searchTreeMap(TreeMap * tree, void* key) {
      |        ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6f8d9e7
Thu 20 Apr 2023 05:21:24 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
18b14a0
Thu 20 Apr 2023 05:23:20 AM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
   58 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
42cef58
Thu 20 Apr 2023 05:23:34 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
4317f25
Thu 20 Apr 2023 05:24:45 AM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
cedb9de
Thu 20 Apr 2023 05:25:54 AM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  6|6
total_score: 5/70
6de9491
Thu 20 Apr 2023 05:28:52 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:82:18: error: invalid initializer
   82 |   TreeNode aux = tree->root;
      |                  ^~~~
treemap.c:84:13: error: invalid operands to binary != (have ‘TreeNode’ and ‘void *’)
   84 |   while(aux != NULL)
      |             ^~
treemap.c:87:10: error: invalid type argument of ‘->’ (have ‘TreeNode’)
   87 |   if (aux->pair->key == key){
      |          ^~
treemap.c:88:21: error: incompatible types when assigning to type ‘TreeNode *’ from type ‘TreeNode’
   88 |     tree->current = aux;
      |                     ^~~
treemap.c:89:15: error: invalid type argument of ‘->’ (have ‘TreeNode’)
   89 |     return aux->pair;
      |               ^~
treemap.c:92:12: error: invalid type argument of ‘->’ (have ‘TreeNode’)
   92 |     if (aux->pair->key > key){
      |            ^~
treemap.c:93:16: error: invalid type argument of ‘->’ (have ‘TreeNode’)
   93 |       aux = aux->right;
      |                ^~
treemap.c:96:16: error: invalid type argument of ‘->’ (have ‘TreeNode’)
   96 |       aux = aux->left;
      |                ^~
treemap.c:104:11: error: invalid operands to binary == (have ‘TreeNode’ and ‘void *’)
  104 |   if (aux == NULL) return NULL;
      |           ^~
Compilation failed
c02bede
Thu 20 Apr 2023 05:29:05 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|6
total_score: 5/70
e317f95
Thu 20 Apr 2023 05:34:26 AM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|6
total_score: 5/70
45ae1f0
Thu 20 Apr 2023 05:41:09 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:84:14: error: invalid operands to binary != (have ‘TreeNode’ and ‘void *’)
   84 |   while(*aux != NULL)
      |         ~~~~ ^~
      |         |
      |         TreeNode
Compilation failed
4a0f4e1
Thu 20 Apr 2023 05:41:17 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|6
total_score: 5/70
5f9b783
Thu 20 Apr 2023 05:43:46 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:82:19: error: incompatible types when initializing type ‘TreeNode *’ using type ‘TreeNode’
   82 |   TreeNode *aux = *tree->root;
      |                   ^
Compilation failed
098dfb3
Thu 20 Apr 2023 05:43:51 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|6
total_score: 5/70
d9b7c87
